# Interpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  render.yaml
include/: expr.hpp  interpreter.hpp  parser.hpp  repl.hpp  scanner.hpp  stmt.hpp  token.hpp  value.hpp
src/: expr.cpp  interpreter.cpp  parser.cpp  scanner.cpp
test/: expr_test.cpp  interpreter_test.cpp  parser_test.cpp  scanner_test.cpp
test/coverage/: coverage.expr.cpp.d09e00be9695031baf02bfb407628336.html  coverage.expr_test.cpp.fcf1c9f63c3975cb4753d6679319f90f.html  coverage.functions.html  coverage.html  coverage.interpreter.cpp.04c817cfc61f840cb288aad079939f6c.html  coverage.interpreter_test.cpp.4ce1764a3f4fc7ea537ff6b1899cbb73.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.parser.cpp.bd8f167953cc43fb7cba7d420fbd1d48.html  coverage.parser_test.cpp.730162395231142237570b22e233192c.html  coverage.scanner.cpp.590af44628799ea844eba0240698e6ce.html  coverage.scanner_test.cpp.11668728fa3fd2f27554f98dc7203d33.html
web/: Dockerfile  README.md
web/client/: index.html  package-lock.json  package.json
web/client/src/: App.jsx  codelang.js  snippets.js  theme.js
web/client/src/components/: IntroDialog.jsx  OutputPanel.jsx  ReferenceDialog.jsx
web/server/: package-lock.json  package.json  server.js
